testdata/baselines/reference/submodule/conformance/overloadTag3.errors.txt
/a.js(1,1): error TS8004: Type parameter declarations can only be used in TypeScript files.


==== /a.js (1 errors) ====
    /**
    ~~~
     * @template T
    ~~~~~~~~~~~~~~
     */
    ~~~
    export class Foo {
    ~~~~~~~~~~~~~~~~~~
        /**
    ~~~~~~~
         * @constructor
    ~~~~~~~~~~~~~~~~~~~
         * @overload
    ~~~~~~~~~~~~~~~~
         */
    ~~~~~~~
        constructor() { }
    ~~~~~~~~~~~~~~~~~~~~~
    
    
        /**
    ~~~~~~~
         * @param {T} value
    ~~~~~~~~~~~~~~~~~~~~~~~
         */
    ~~~~~~~
        bar(value) { }
    ~~~~~~~~~~~~~~~~~~
    }
    ~
!!! error TS8004: Type parameter declarations can only be used in TypeScript files.
    
    /** @type {Foo<number>} */
    let foo;
    foo = new Foo();
    